syntax = "proto3";

import "aelf_options.proto";
import "common.proto";
import "core.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AElf.Contracts.TestContract";

//Input
message InitialBasicContractInput {
    string ContractName = 1;
    int64 MinValue = 2;
    int64 MaxValue = 3;
    int64 MortgageValue = 4;
    Address Manager = 5;
}

message BetLimitInput {
    int64 MinValue = 2;
    int64 MaxValue = 3;
}

message BetInput {
    int64 Int64Value = 1;
}
//Output

message MoneyOutput {
    int64 Int64Value = 1;
}

message BetStatus {
    bool BoolValue = 1;
}
